exports[`prefer-lowercase-title > invalid(1): import test from 'node:test';\ntest({name: 'Bad Title', fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 'Bad Title', fn() {}});

`;

exports[`prefer-lowercase-title > invalid(1): import test from 'node:test';\ntest({name: 'Bad Title', fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 'Bad Title', fn() {}});
    |             ^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import test from 'node:test';
  2 | test({name: 'bad Title', fn() {}});

`;

exports[`prefer-lowercase-title > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Delete user\", () => {}); 1`] = `

Options:
- allowedPrefixes:
    - 'GET'

Code:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Delete user", () => {});

`;

exports[`prefer-lowercase-title > invalid(10): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Delete user\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Delete user", () => {});
    |      ^^^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("delete user", () => {});

`;

exports[`prefer-lowercase-title > invalid(11): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", () => {}); 1`] = `

Options:
- ignore:
    - 'describe'

Code:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(11): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Foo", () => {});
    |      ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(12): import {test, it, describe, suite, before} from 'node:test';\ndescribe(\"Foo\", () => {}); 1`] = `

Options:
- ignore:
    - 'test'

Code:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(12): import {test, it, describe, suite, before} from 'node:test';\ndescribe(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | describe("Foo", () => {});
    |          ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(13): import {test, it, describe, suite, before} from 'node:test';\ntest(\"\\u0041bc\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("\\u0041bc", () => {});

`;

exports[`prefer-lowercase-title > invalid(13): import {test, it, describe, suite, before} from 'node:test';\ntest(\"\\u0041bc\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("\\u0041bc", () => {});
    |      ^^^^^^^^^^ Start the title with a lowercase letter.

`;

exports[`prefer-lowercase-title > invalid(14): import {test, it, describe, suite, before} from 'node:test';\ntest(\"\\u{41}bc\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("\\u{41}bc", () => {});

`;

exports[`prefer-lowercase-title > invalid(14): import {test, it, describe, suite, before} from 'node:test';\ntest(\"\\u{41}bc\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("\\u{41}bc", () => {});
    |      ^^^^^^^^^^ Start the title with a lowercase letter.

`;

exports[`prefer-lowercase-title > invalid(15): import * as nodeTest from 'node:test';\nnodeTest.test(\"Foo\", () => {}); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(15): import * as nodeTest from 'node:test';\nnodeTest.test(\"Foo\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("Foo", () => {});
    |               ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(16): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\" as string, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Foo" as string, () => {});

`;

exports[`prefer-lowercase-title > invalid(16): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\" as string, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Foo" as string, () => {});
    |      ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("foo" as string, () => {});

`;

exports[`prefer-lowercase-title > invalid(17): import test from 'node:test';\ntest({name: 'Bad Title'}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 'Bad Title'}, () => {});

`;

exports[`prefer-lowercase-title > invalid(17): import test from 'node:test';\ntest({name: 'Bad Title'}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 'Bad Title'}, () => {});
    |             ^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import test from 'node:test';
  2 | test({name: 'bad Title'}, () => {});

`;

exports[`prefer-lowercase-title > invalid(18): import test from 'node:test';\ntest({name: 'Bad Title'}, {skip: true}, () => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 'Bad Title'}, {skip: true}, () => {});

`;

exports[`prefer-lowercase-title > invalid(18): import test from 'node:test';\ntest({name: 'Bad Title'}, {skip: true}, () => {}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 'Bad Title'}, {skip: true}, () => {});
    |             ^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import test from 'node:test';
  2 | test({name: 'bad Title'}, {skip: true}, () => {});

`;

exports[`prefer-lowercase-title > invalid(19): import {test, it, describe, suite, before} from 'node:test';\ntest(\"lowercase\", {name: \"UPPERCASE\"}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("lowercase", {name: "UPPERCASE"}, () => {});

`;

exports[`prefer-lowercase-title > invalid(19): import {test, it, describe, suite, before} from 'node:test';\ntest(\"lowercase\", {name: \"UPPERCASE\"}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("lowercase", {name: "UPPERCASE"}, () => {});
    |                          ^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("lowercase", {name: "uPPERCASE"}, () => {});

`;

exports[`prefer-lowercase-title > invalid(2): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(2): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Foo", () => {});
    |      ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(20): import {test, it, describe, suite, before} from 'node:test';\ntest(function inner() {}, {name: \"UPPERCASE\"}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test(function inner() {}, {name: "UPPERCASE"});

`;

exports[`prefer-lowercase-title > invalid(20): import {test, it, describe, suite, before} from 'node:test';\ntest(function inner() {}, {name: \"UPPERCASE\"}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test(function inner() {}, {name: "UPPERCASE"});
    |                                  ^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test(function inner() {}, {name: "uPPERCASE"});

`;

exports[`prefer-lowercase-title > invalid(21): import {test, it, describe, suite, before} from 'node:test';\ntest(\"lowercase\", {...rest, name: \"UPPERCASE\"}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("lowercase", {...rest, name: "UPPERCASE"}, () => {});

`;

exports[`prefer-lowercase-title > invalid(21): import {test, it, describe, suite, before} from 'node:test';\ntest(\"lowercase\", {...rest, name: \"UPPERCASE\"}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("lowercase", {...rest, name: "UPPERCASE"}, () => {});
    |                                   ^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("lowercase", {...rest, name: "uPPERCASE"}, () => {});

`;

exports[`prefer-lowercase-title > invalid(22): import {test} from 'node:test';\ntest('p', async t => { await t.test('Foo', () => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test('Foo', () => {}); });

`;

exports[`prefer-lowercase-title > invalid(22): import {test} from 'node:test';\ntest('p', async t => { await t.test('Foo', () => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', async t => { await t.test('Foo', () => {}); });
    |                                     ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test} from 'node:test';
  2 | test('p', async t => { await t.test('foo', () => {}); });

`;

exports[`prefer-lowercase-title > invalid(23): import {test, getTestContext} from 'node:test';\ntest('p', async () => { await getTestContext().test('Foo', () => {}); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('p', async () => { await getTestContext().test('Foo', () => {}); });

`;

exports[`prefer-lowercase-title > invalid(23): import {test, getTestContext} from 'node:test';\ntest('p', async () => { await getTestContext().test('Foo', () => {}); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('p', async () => { await getTestContext().test('Foo', () => {}); });
    |                                                     ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('p', async () => { await getTestContext().test('foo', () => {}); });

`;

exports[`prefer-lowercase-title > invalid(24): import {test, it, describe, suite, before} from 'node:test';\ntest(\"𐐀bc\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("𐐀bc", () => {});

`;

exports[`prefer-lowercase-title > invalid(24): import {test, it, describe, suite, before} from 'node:test';\ntest(\"𐐀bc\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("𐐀bc", () => {});
    |      ^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("𐐨bc", () => {});

`;

exports[`prefer-lowercase-title > invalid(25): import {test, it, describe, suite, before} from 'node:test';\ntest(\"𝐀bc\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("𝐀bc", () => {});

`;

exports[`prefer-lowercase-title > invalid(25): import {test, it, describe, suite, before} from 'node:test';\ntest(\"𝐀bc\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("𝐀bc", () => {});
    |      ^^^^^^ Start the title with a lowercase letter.

`;

exports[`prefer-lowercase-title > invalid(26): import {test} from 'node:test';\ntest('Uppercase', 'str', () => {}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('Uppercase', 'str', () => {});

`;

exports[`prefer-lowercase-title > invalid(26): import {test} from 'node:test';\ntest('Uppercase', 'str', () => {}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('Uppercase', 'str', () => {});
    |      ^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test} from 'node:test';
  2 | test('uppercase', 'str', () => {});

`;

exports[`prefer-lowercase-title > invalid(3): import {test, it, describe, suite, before} from 'node:test';\nit(\"Should work\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | it("Should work", () => {});

`;

exports[`prefer-lowercase-title > invalid(3): import {test, it, describe, suite, before} from 'node:test';\nit(\"Should work\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | it("Should work", () => {});
    |    ^^^^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | it("should work", () => {});

`;

exports[`prefer-lowercase-title > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ndescribe(\"Foo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(4): import {test, it, describe, suite, before} from 'node:test';\ndescribe(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | describe("Foo", () => {});
    |          ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(5): import {test, it, describe, suite, before} from 'node:test';\nsuite(\"Foo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | suite("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(5): import {test, it, describe, suite, before} from 'node:test';\nsuite(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | suite("Foo", () => {});
    |       ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | suite("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(6): import {test, it, describe, suite, before} from 'node:test';\ndescribe.only(\"Foo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe.only("Foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(6): import {test, it, describe, suite, before} from 'node:test';\ndescribe.only(\"Foo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | describe.only("Foo", () => {});
    |               ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | describe.only("foo", () => {});

`;

exports[`prefer-lowercase-title > invalid(7): import {test, it, describe, suite, before} from 'node:test';\ntest(\`Foo \${x}\`, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test(\`Foo \${x}\`, () => {});

`;

exports[`prefer-lowercase-title > invalid(7): import {test, it, describe, suite, before} from 'node:test';\ntest(\`Foo \${x}\`, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test(\`Foo \${x}\`, () => {});
    |      ^^^^^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test(\`foo \${x}\`, () => {});

`;

exports[`prefer-lowercase-title > invalid(8): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", {skip: true}, () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Foo", {skip: true}, () => {});

`;

exports[`prefer-lowercase-title > invalid(8): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Foo\", {skip: true}, () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Foo", {skip: true}, () => {});
    |      ^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("foo", {skip: true}, () => {});

`;

exports[`prefer-lowercase-title > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Éfoo\", () => {}); 1`] = `

  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("Éfoo", () => {});

`;

exports[`prefer-lowercase-title > invalid(9): import {test, it, describe, suite, before} from 'node:test';\ntest(\"Éfoo\", () => {}); 2`] = `

Message:
  1 | import {test, it, describe, suite, before} from 'node:test';
> 2 | test("Éfoo", () => {});
    |      ^^^^^^ Start the title with a lowercase letter.

Output:
  1 | import {test, it, describe, suite, before} from 'node:test';
  2 | test("éfoo", () => {});

`;
